--- a/public/team1.html
+++ b/public/team1.html
@@ -32,7 +32,15 @@
   <script src="/socket.io/socket.io.js"></script>
   <script>
     var socket = io();
-    
+    $(window).keypress(function(e) {
+        if (e.which === 32) {
+          socket.emit("team 1 press")
+        }
+    });
+
+    socket.on('update score',(score) => {
+      console.log(score);
+    })
 
   </script>
 
