--- a/public/team1.html
+++ b/public/team1.html
@@ -9,20 +9,20 @@
   </head>
   <body>
     <article class="container">
-      <section class="score" id="score-team-1">
-        <p>Team 1 <br> <br> <span>450</span></p>
+      <section class="score">
+        <p>Team 1 <br> <br> <span  id="score-team-1">450</span></p>
       </section>
 
       <section id="team-1"></section>
 
       <section id="team-2"></section>
 
-      <section class="score" id="score-team-1">
-        <p>Team 2 <br> <br> <span>450</span></p>
+      <section class="score">
+        <p>Team 2 <br> <br> <span id="score-team-2"></span></p>
 
       </section>
 
-      <section id="targetPoints"><p>Objetivo</p><p>1000</p></section>
+      <section id="targetPoints"><p>Objetivo</p><p  id="score-to-win"></p></section>
     </article>
     <script
   src="https://code.jquery.com/jquery-3.2.1.js"
@@ -38,9 +38,33 @@
         }
     });
 
-    socket.on('update score',(score) => {
-      console.log(score);
+    socket.on('update score',(gameData) => {
+      const widths = calculateWidthFromScore(gameData);
+      renderWidths(widths);
+      modifyNumericScores(gameData);
     })
+
+    function calculateWidthFromScore(gameData){
+      return {
+        widthTeamA:(gameData.scoreA * 90) / (gameData.scoreToWin),
+        widthTeamB:(gameData.scoreB * 90) / (gameData.scoreToWin)
+      };
+    }
+
+    function modifyNumericScores(gameData){
+      let $scoreTeam1 = $("#score-team-1");
+      let $scoreTeam2 = $("#score-team-2");
+      let $scoreToWin = $("#score-team-3");
+
+      $scoreTeam1.text(gameData.scoreA);
+      $scoreTeam2.text(gameData.scoreB);
+      $scoreToWin.text(gameData.scoreToWin);
+    }
+
+    function renderWidths(widths){
+      $("#team-1").css("width",widths.widthTeamA+'%');
+      $("#team-2").css("width",widths.widthTeamB+'%');
+    }
 
   </script>
 
