--- a/public/team2.html
+++ b/public/team2.html
@@ -9,20 +9,20 @@
   </head>
   <body>
     <article class="container">
-      <section class="score" id="score-team-1">
-        <p>Team 1 <br> <br> <span>450</span></p>
+      <section class="score">
+        <p>Team 1 <br> <br> <span  id="score-team-1"></span></p>
       </section>
 
       <section id="team-1"></section>
 
       <section id="team-2"></section>
 
-      <section class="score" id="score-team-1">
-        <p>Team 2 <br> <br> <span>450</span></p>
+      <section class="score">
+        <p>Team 2 <br> <br> <span id="score-team-2"></span></p>
 
       </section>
 
-      <section id="targetPoints"><p>Objetivo</p><p>1000</p></section>
+      <section id="targetPoints"><p>Objetivo</p><p  id="score-to-win"></p></section>
     </article>
     <script
   src="https://code.jquery.com/jquery-3.2.1.js"
@@ -34,21 +34,38 @@
     var socket = io();
     $(window).keypress(function(e) {
         if (e.which === 32) {
-          socket.emit("team 2 press")
+          socket.emit("team 2 press");
+          socket.emit("keypress");
         }
     });
 
     socket.on('update score',(gameData) => {
       const widths = calculateWidthFromScore(gameData);
-      console.log(widths);
       renderWidths(widths);
-    })
+      modifyNumericScores(gameData);
+    });
+
+    socket.on('game end', (winner) => {
+      $(window).unbind("keypress");
+      alert( winner + "has won.");
+    });
+
 
     function calculateWidthFromScore(gameData){
       return {
         widthTeamA:(gameData.scoreA * 90) / (gameData.scoreToWin),
         widthTeamB:(gameData.scoreB * 90) / (gameData.scoreToWin)
       };
+    }
+
+    function modifyNumericScores(gameData){
+      let $scoreTeam1 = $("#score-team-1");
+      let $scoreTeam2 = $("#score-team-2");
+      let $scoreToWin = $("#score-to-win");
+
+      $scoreTeam1.text(gameData.scoreA);
+      $scoreTeam2.text(gameData.scoreB);
+      $scoreToWin.text(gameData.scoreToWin);
     }
 
     function renderWidths(widths){
